Add documentation link to error message
Automatically open install instructions when ffmpeg or ffprobe are not present.